-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.3.0 Beta1, 5.9.2
-
Fix Version/s: 5.9.4
-
Component/s: Multimedia
-
Platform/s:
-
Commits:10998733af8a3d54b795ee57a8df9a1b3e776aae
The QML videoOutput set to autoOrientation works properly for the back camera, but shows an inverted image for front camera.
Steps to reproduce the issue:
1. Run attached test application
Outcome:
Front camera viewfinder is flipped